--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,7 @@ python:
   - 3.8
 install:
   - pip install -r requirements.txt
-script: pytest # run tests
+script:
+  - pytest # run tests
+after_success:
+  - coveralls
