--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-  - pytest # run tests
+  - coverage run -m pytest
 after_success:
   - coveralls
