--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,8 @@ name = "pypi"
 pygame = "*"
 pytest-cov = "*"
 pytest = "*"
-python-coveralls = "*"
+coveralls = "*"
+PyYAML = "*"
 
 [dev-packages]
 
