--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ install:
   - pip install -r requirements.txt
 script:
   - pytest --cov=life --cov-report=term-missing | coveralls
-# after_success:
-#   - coveralls
+after_success:
+  - coveralls
