--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
 install:
   - pip install -r requirements.txt
 script:
+  - flake8
   - coverage run -m pytest
 after_success:
   - coveralls
