--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
   - 3.8
 install:
   - pip install -r requirements.txt
+  - pip install -r requirements-dev.txt
 script:
   - flake8
   - coverage run -m pytest
